--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
